# machop

./: .gitignore  Cargo.toml  README.md  linker.sh
example/c/: Makefile  main.c
example/cpp/: Makefile
example/rust/.cargo/: config.toml
src/: arg_parser.rs  lib.rs  linker_args.rs  main.rs  tbd.rs
tools/parsefat/: Cargo.toml
tools/parsefat/src/: main.rs
