[package]
name = "nicks-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.9.0", default_features = false }
goblin = { version = "0.5.2" }
log = { version = "0.4.17", default_features = false }
text-stub-library = { git = "https://github.com/nick96/PyOxidizer.git", branch = "main" }

