[workspace]
members = [ "tools/parsefat" ]

[package]
name = "machop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.9.0", default_features = false }
faerie = "0.16.0"
goblin = { git = "https://github.com/nick96/goblin", branch = "multi-arch-with-archives" }
log = { version = "0.4.17", default_features = false }
target-lexicon = "0.11"
text-stub-library = { git = "https://github.com/nick96/PyOxidizer.git", branch = "main" }
llvm-command-parser = { git = "https://github.com/indygreg/toolchain-tools.git", branch = "main" }
llvm-option-parser = { git = "https://github.com/indygreg/toolchain-tools.git", branch = "main" }
byteorder = "1.4.3"

